<resources>
    <string name="app_name">FinalProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Help</string>

    <string name="menu_home">Home</string>
    <string name="menu_pexels">Pexels</string>
    <string name="menu_movie_info">Movie Information</string>
    <string name="menu_ticket_master">TicketMaster</string>
    <string name="menu_soccer_match">Soccer match highlights</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>